--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.mapstruct/mapstruct
     implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
