--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.mail.password="dpop cvbn gshv xtvd"
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+firebase.bucket-name=codeverse-7830f.firebasestorage.app
+firebase.credentials=firebase/codeverse-firebase-config.json
+
