--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 firebase.bucket-name=codeverse-7830f.firebasestorage.app
-firebase.credentials=firebase/codeverse-firebase-config.json
+firebase.credentials=src/main/resources/firebase/codeverse-firebase-config.enc
 
