--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.4.3'
     implementation 'vn.payos:payos-java:1.0.3'
     implementation 'com.google.api-client:google-api-client:2.2.0'
+    //https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.5.3'
+    //https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.5.3'
 
     // Groovy & Spock test support
     testImplementation 'org.codehaus.groovy:groovy:3.0.17'
