--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=code-verse_web_be
-# spring.datasource.url=jdbc:mysql://localhost:3306/code_verse_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-# spring.datasource.username=root
-# spring.datasource.password=12345678
-spring.datasource.url=${MYSQL_JDBC_URL}
-spring.datasource.username=${MYSQL_USERNAME}
-spring.datasource.password=${MYSQL_PASSWORD}
+ spring.datasource.url=jdbc:mysql://localhost:3306/code_verse_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+ spring.datasource.username=root
+ spring.datasource.password=12345678
+#spring.datasource.url=${MYSQL_JDBC_URL}
+#spring.datasource.username=${MYSQL_USERNAME}
+#spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
