--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 firebase.bucket-name=codeverse-7830f.firebasestorage.app
-firebase.credentials=src/main/resources/firebase/codeverse-firebase-config.enc
+# firebase.credentials=src/main/resources/firebase/codeverse-firebase-config.enc
+firebase.credentials=firebase/codeverse-firebase-config.enc
 
 payos.client-id=ec630018-8708-4d62-a897-03c5917fa6f6
 payos.api-key=1b11e579-f4f6-443c-b736-27c07174fa93
