--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,4 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
+logging.level.org.springframework.security=DEBUG
