--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     testImplementation("org.mockito:mockito-core:5.17.0")
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     implementation("ch.qos.logback:logback-classic:1.5.18")
-    implementation 'com.google.protobuf:protobuf-java:3.25.3'   
+    implementation 'com.google.protobuf:protobuf-java:3.25.3'
+    implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 test {
